syntax = "proto3";

message Argon2Options {
  enum Argon2Type {
    Argon2d = 0;
    Argon2id = 1;
  }

  optional Argon2Type type = 1;
  // see https://github.com/P-H-C/phc-winner-argon2/blob/16d3df698db2486dde480b09a732bf9bf48599f9/include/argon2.h#L300
  optional uint32 time_iterations = 2;
  // see https://github.com/P-H-C/phc-winner-argon2/blob/16d3df698db2486dde480b09a732bf9bf48599f9/include/argon2.h#L300
  optional uint32 memory_kib = 3;
  // see https://github.com/P-H-C/phc-winner-argon2/blob/16d3df698db2486dde480b09a732bf9bf48599f9/include/argon2.h#L301
  optional uint32 parallelism = 4;
}

message Header {
  enum CryptAlgorithm {
    AES_256_GCM = 0;
    ChaCha20_Poly1305 = 1;
  }
  enum CompressAlgorithm {
    None = 0;
    Gzip = 1;
    Brotli = 2;
  }

  optional bytes crypt_nonce = 1;
  optional bytes crypt_auth_tag = 2;
  optional CryptAlgorithm crypt_algorithm = 3;
  optional bytes key_salt = 4;
  optional uint32 key_length = 5;
  oneof key_options {
    Argon2Options argon2_key_options = 15;
  }
  optional CompressAlgorithm compress_algorithm = 6;
}

// message SimpleHeader {
//   optional bytes crypt_nonce = 1;
//   optional bytes crypt_auth_tag = 2;
// }
